# Triviador

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Questions.db  README.md  Triviador.sln  Triviador_-_Profiling.docx  sh.exe.stackdump
Questions/Questions commands/: MC Question.txt  QuestionChoice.txt  SCQuestionsCommands.txt
Questions/Questions files/: Multiple-choice questions.txt  SCQuestions.txt
Triviador/: CMakeLists.txt  Game.cpp  Game.h  Question.h  QuestionChoice.cpp  QuestionChoice.h  Triviador.cpp  Triviador.vcxproj  Triviador.vcxproj.filters  User.cpp  UserStatistics.cpp  UserStatistics.h
Triviador/Database/: CMakeLists.txt
Triviador/Database/include/: DBAccess.h  Game.h  GameService.h  Question.h  QuestionChoice.h  QuestionChoiceService.h  QuestionService.h  Region.h  User.h  UserService.h  UserStatistics.h  UserStatisticsService.h
Triviador/Database/src/: DBAccess.cpp  Game.cpp  GameService.cpp  Question.cpp  QuestionChoice.cpp  QuestionChoiceService.cpp  QuestionService.cpp  Region.cpp  User.cpp  UserService.cpp  UserStatistics.cpp  UserStatisticsService.cpp  main.cpp
Triviador/Server/: CMakeLists.txt
Triviador/Server/include/: Backend.h  BaseChoiceService.h  Lobby.h  Map.h  Player.h  PlayerService.h  Question.h  QuestionChoice.h  Region.h  Status.h
Triviador/Server/src/: Backend.cpp  BaseChoiceService.cpp  Lobby.cpp  Map.cpp  Player.cpp  PlayerService.cpp  Question.cpp  QuestionChoice.cpp  Region.cpp
Triviador/Triviador/: CMakeLists.txt  Triviador.h
Triviador/Triviador/Database/: CMakeLists.txt
Triviador/Triviador/Database/src/: main.cpp
Triviador/Triviador/UI/: CMakeLists.txt
Triviador/Triviador/UI/forms/: mainwindow.ui
Triviador/Triviador/src/: Triviador.cpp
Triviador/UI/: CMakeLists.txt
Triviador/UI/GUI_autogen/include_Release/: ui_mainwindow.h
Triviador/UI/GUI_autogen/include_Release/6YEA5652QU/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
Triviador/UI/Resources/: 1.txt  2.txt  3.txt
Triviador/UI/forms/: DuelResult.ui  Login.ui  MCQuestion.ui  Map.ui  NumericQuestion.ui  Profile.ui  Register.ui  StartWindow.ui  SugestionAnswer.ui  lobby.ui  mainwindow.ui
Triviador/UI/include/: DuelResult.h  Game.h  Login.h  MCQuestion.h  Map.h  NumericQuestion.h  Profile.h  Region.h  Register.h  RequestHandler.h  StartWindow.h  SugestionAnswer.h  Tile.h  lobby.h  mainwindow.h
Triviador/UI/src/: DuelResult.cpp  Game.cpp  Login.cpp  MCQuestion.cpp  Map.cpp  NumericQuestion.cpp  Profile.cpp  Region.cpp  Register.cpp  RequestHandler.cpp  StartWindow.cpp  SugestionAnswer.cpp  Tile.cpp  lobby.cpp  main.cpp  mainwindow.cpp
Triviador/Validator/: CMakeLists.txt
Triviador/Validator/include/: Validator.h
Triviador/Validator/src/: Validator.cpp  main.cpp
